--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ethers": "^6.13.4",
     "framer-motion": "^11.11.10",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
